--- a/package.json
+++ b/package.json
@@ -27,13 +27,20 @@
     "src/*.js"
   ],
   "scripts": {
+    "start": "tsc --watch",
+    "build": "tsc",
     "lint": "eslint .",
     "test": "node test/test.js"
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/node": "^14.14.20",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
     "eslint": "^7.17.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "typescript": "^4.1.3"
   }
 }
