--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,6 @@
       "node": {
         "extensions": [".js", ".ts"]
       }
-    },
-    "react": {
-      "version": "detect"
     }
   },
   "extends": [
@@ -20,11 +17,11 @@
   ],
   "rules": {
     "semi": ["error", "always"],
+    "comma-dangle": ["error", "always-multiline"],
     "import/extensions": 0,
     "object-curly-spacing": ["error", "always"],
     "quotes": ["error", "single"],
     "@typescript-eslint/explicit-module-boundary-types": 0,
-    "@typescript-eslint/no-explicit-any": 0,
-    "react/display-name": 0
+    "@typescript-eslint/no-explicit-any": 0
   }
 }
