--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-prettier": "^3.3.1",
     "typescript": "^4.1.3"
   }
