--- a/.github/workflows/lint.js.yml
+++ b/.github/workflows/lint.js.yml
@@ -3,6 +3,10 @@
 
 name: Lint code
 
+concurrency:
+  group: ${{ github.ref }}-lint
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ master ]
