--- a/.github/workflows/test.js.yml
+++ b/.github/workflows/test.js.yml
@@ -3,6 +3,10 @@
 
 name: Tests
 
+concurrency:
+  group: ${{ github.ref }}-test
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ master ]
