--- a/package.json
+++ b/package.json
@@ -1,51 +1,3 @@
-{
-  "name": "mlg-converter",
-  "version": "0.8.1",
-  "license": "MIT",
-  "description": "MLG log files converter",
-  "author": "Piotr Rogowski <piotr.rogowski0@gmail.com>",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/karniv00l/mlg-converter"
-  },
-  "keywords": [
-    "efi-analytics",
-    "tunerstudio",
-    "megalogviewer",
-    "mlg",
-    "mlvlg",
-    "virtual-dyno",
-    "csv",
-    "megasquirt",
-    "parsing",
-    "speeduino",
-    "cli",
-    "json"
-  ],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "bin": {
-    "mlg-converter": "dist/cli.js"
-  },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "tsc",
-    "prepare": "npm run build",
-    "start": "tsc --watch",
-    "lint": "tsc && eslint --max-warnings=0 .",
-    "test": "node test/test.js"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-modules-newline": "^0.0.6",
-    "eslint-plugin-prettier": "^4.2.1",
-    "typescript": "^4.8.4"
-  }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:743ef631ae372fa94c7bb14b21a1b523b1ecb375dd9ab35788ed51d64a279e42
+size 1170
