--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,3 @@
-{
-  "compilerOptions": {
-    "target": "ES2017",
-    "declaration": true,
-    "module": "commonjs",
-    "outDir": "dist",
-    "removeComments": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-  },
-  "include": [
-    "src",
-  ]
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:89b58d5e3c8f7ec3953eb1756957878c70138e570b6548d224ee1447a4200a13
+size 512
