--- a/.github/workflows/lint.js.yml
+++ b/.github/workflows/lint.js.yml
@@ -30,6 +30,5 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i -g npm
-    - run: npm ci
+    - run: npm i
     - run: npm run lint
