--- a/.github/workflows/lint.js.yml
+++ b/.github/workflows/lint.js.yml
@@ -30,5 +30,5 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i
+    - run: npm ci
     - run: npm run lint
